Updated README to be more sparse, awaiting a more complete description of features

--- a/README
+++ b/README
@@ -4,9 +4,4 @@ Rice Bikes Processing App
 This site is built for use by the employees of Rice Bikes, the student-
 run bike shop at Rice University.
 
-Users can enter the information of a customer, including email address. 
-When the order is submitted, the customer will receive an email from
-the bike shop confirming they have been processed. When the job is
-finished, the emloyees can update the status to completed, and the 
-customer will receive an email notifying them that they can come in
-and pick up their bike.
+More on features comings soon.
